Changes in title

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,6 @@
     {% else %}
     <title>MedifAI</title>
     {% endif %}
-
     <style>
         /* Navbar Styles */
         .navbar {
@@ -61,7 +60,7 @@
 
         footer a:hover {
             text-decoration: underline;
-            color: burlywood !important;
+            color: rgb(249, 248, 247) !important;
         }
     </style>
 
