Validation for inputs in prediction

--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -38,9 +38,8 @@
 
 {% block extra_css %}
     <style>
-        /* Specific Styles for Home Page */
         body, html {
-        height: 100%; /* Full height for both body and html */
+        height: 100%;
         margin: 0;
         font-family: 'Arial', sans-serif;
         background-image: url("{% static 'assets/home-page.png' %}");
