--- a/templates/heart_disease_predict.html
+++ b/templates/heart_disease_predict.html
@@ -13,67 +13,67 @@
             <div class="row">
                 <div class="col-md-6 form-group">
                     <label for="age">Age (Years):</label>
-                    <input type="number" name="age" id="age" required>
+                    <input type="number" name="age" id="age" min="1" max="100" required>
                 </div>
                 <div class="col-md-6 form-group">
                     <label for="sex">Sex (0 = Female, 1 = Male):</label>
-                    <input type="number" name="sex" id="sex" required>
+                    <input type="number" name="sex" id="sex" min="0" max="1" required>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 form-group">
                     <label for="cp">Chest Pain Type (0 = Typical Angina, 1 = Atypical Angina, 2 = Non-anginal Pain, 3 = Asymptomatic):</label>
-                    <input type="number" name="cp" id="cp" required>
+                    <input type="number" name="cp" id="cp" min="0" max="3" required>
                 </div>
                 <div class="col-md-6 form-group">
                     <label for="trestbps">Resting Blood Pressure (mm Hg):</label>
-                    <input type="number" name="trestbps" id="trestbps" required>
+                    <input type="number" name="trestbps" id="trestbps" min="0" required>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 form-group">
                     <label for="chol">Cholesterol (mg/dl):</label>
-                    <input type="number" name="chol" id="chol" required>
+                    <input type="number" name="chol" id="chol" min="0" required>
                 </div>
                 <div class="col-md-6 form-group">
                     <label for="fbs">Fasting Blood Sugar (>120 mg/dl = 1, Otherwise = 0):</label>
-                    <input type="number" name="fbs" id="fbs" required>
+                    <input type="number" name="fbs" id="fbs" min="0" max="1" required>
                 </div>
             </div>
-            <div class="row">
+            <div class="row"> 
                 <div class="col-md-6 form-group">
                     <label for="restecg">Resting ECG (0 = Normal, 1 = ST-T Wave Abnormality, 2 = Left Ventricular Hypertrophy):</label>
-                    <input type="number" name="restecg" id="restecg" required>
+                    <input type="number" name="restecg" id="restecg" min="0" max="2" required>
                 </div>
                 <div class="col-md-6 form-group">
                     <label for="thalach">Max Heart Rate Achieved (bpm):</label>
-                    <input type="number" name="thalach" id="thalach" required>
+                    <input type="number" name="thalach" id="thalach" min="0" required>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 form-group">
                     <label for="exang">Exercise Induced Angina (1 = Yes, 0 = No):</label>
-                    <input type="number" name="exang" id="exang" required>
+                    <input type="number" name="exang" id="exang" min="0" max="1" required>
                 </div>
                 <div class="col-md-6 form-group">
                     <label for="oldpeak">ST Depression Induced by Exercise (Relative to Rest):</label>
-                    <input type="number" name="oldpeak" id="oldpeak" required>
+                    <input type="number" name="oldpeak" id="oldpeak" min="0" required>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 form-group">
                     <label for="slope">Slope of the Peak Exercise ST (0 = Upsloping, 1 = Flat, 2 = Downsloping):</label>
-                    <input type="number" name="slope" id="slope" required>
+                    <input type="number" name="slope" id="slope" min="0" max="2" required>
                 </div>
                 <div class="col-md-6 form-group">
                     <label for="ca">Number of Major Vessels (0-3):</label>
-                    <input type="number" name="ca" id="ca" required>
+                    <input type="number" name="ca" id="ca" min="0" max="3" required>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 form-group">
                     <label for="thal">Thalassemia (1 = Normal, 2 = Fixed Defect, 3 = Reversible Defect):</label>
-                    <input type="number" name="thal" id="thal" required>
+                    <input type="number" name="thal" id="thal" min="1" max="3" required>
                 </div>
             </div>
             <div class="text-center mt-4">
@@ -93,9 +93,8 @@
 
 {% block extra_css %}
     <style>
-        /* Specific Styles for Home Page */
         body, html {
-        height: 100%; /* Full height for both body and html */
+        height: 100%;
         margin: 0;
         font-family: 'Arial', sans-serif;
         background-image: url("{% static 'assets/home-page.png' %}");
@@ -111,7 +110,7 @@
         }
         .container {
             max-width: 700px;
-            background: #fff;
+            background: rgb(231, 235, 220);
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
