--- a/templates/predict.html
+++ b/templates/predict.html
@@ -27,17 +27,17 @@
                 </div>
                 <div class="col-md-6 form-group">
                     <label for="skin_thickness">Skin Thickness (mm):</label>
-                    <input type="number" name="skin_thickness" id="skin_thickness" min="0">
+                    <input type="number" name="skin_thickness" id="skin_thickness" min="0" required>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 form-group">
                     <label for="insulin">Insulin (µU/mL):</label>
-                    <input type="number" name="insulin" id="insulin" min="0">
+                    <input type="number" name="insulin" id="insulin" min="0" required>
                 </div>
                 <div class="col-md-6 form-group">
                     <label for="bmi">BMI (kg/m²):</label>
-                    <input type="number" step="0.1" name="bmi" id="bmi" min="0" required>
+                    <input type="number" step="0.01" name="bmi" id="bmi" min="0" required>
                 </div>
             </div>
             <div class="row">
@@ -47,7 +47,7 @@
                 </div>
                 <div class="col-md-6 form-group">
                     <label for="age">Age (years):</label>
-                    <input type="number" name="age" id="age" min="0" required>
+                    <input type="number" name="age" id="age" min="0" max="100" required>
                 </div>
             </div>
             <div class="text-center mt-4">
@@ -67,9 +67,8 @@
 
 {% block extra_css %}
     <style>
-        /* Specific Styles for Home Page */
         body, html {
-        height: 100%; /* Full height for both body and html */
+        height: 100%;
         margin: 0;
         font-family: 'Arial', sans-serif;
         background-image: url("{% static 'assets/home-page.png' %}");
@@ -85,7 +84,7 @@
         }
         .container {
             max-width: 700px;
-            background: #fff;
+            background: rgb(231, 235, 220);
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
