--- a/templates/profile.html
+++ b/templates/profile.html
@@ -28,9 +28,8 @@
 
 {% block extra_css %}
     <style>
-        /* Specific Styles for Profile Page */
         body, html {
-            height: 100%; /* Full height for both body and html */
+            height: 100%;
             margin: 0;
             font-family: 'Arial', sans-serif;
             background-image: url("{% static 'assets/home-page.png' %}");
