--- a/templates/terms.html
+++ b/templates/terms.html
@@ -30,9 +30,8 @@
 
 {% block extra_css %}
     <style>
-        /* Specific Styles for Terms of Service Page */
         body, html {
-        height: 100%; /* Full height for both body and html */
+        height: 100%;
         margin: 0;
         font-family: 'Arial', sans-serif;
         background-image: url("{% static 'assets/home-page.png' %}");
