--- a/templates/home.html
+++ b/templates/home.html
@@ -65,7 +65,7 @@
             background-image: url("{% static 'assets/home-page.png' %}");
         }
         h1,.page-desc{
-            color: antiquewhite;
+            color: rgb(211, 236, 23);
         }
         .content {
             flex: 1; 
@@ -74,14 +74,18 @@
         }
 
         .card {
-            margin: 15px;
+            margin: 20px;
+            padding: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             border-radius: 10px;
+            height: 240px;
+            width: 420px;
+            background: rgb(231, 235, 220);
         }
 
         .card-title {
-            font-size: 1.5rem;
-            color: #333;
+            font-size: 1.7rem;
+            color: #c40909;
         }
 
         .btn-custom {
