--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Diabetes Prediction</h5>
-                            <p class="card-text">Get insights into your risk of diabetes using advanced AI models. Quick and easy predictions to keep you informed.</p>
+                            <p class="card-text">Our AI-powered tool provides a quick and reliable way to assess your risk of diabetes. By analyzing key health metrics such as blood glucose levels, BMI and pregnancies, this tool delivers personalized insights to help you make informed decisions about your health and lifestyle. Stay proactive and take control of your well-being today.</p>
                             <a href="{% url 'diabetes_predict' %}" class="btn btn-custom">Predict</a>
                         </div>
                     </div>
@@ -34,7 +34,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Heart Disease Prediction</h5>
-                            <p class="card-text">Evaluate your heart health with cutting-edge AI predictions designed to provide accurate results for better care.</p>
+                            <p class="card-text">Gain valuable insights into your heart health with our advanced AI predictions. This tool evaluates critical factors such as cholesterol, blood pressure and lifestyle habits along with age to identify the potential risks of heart disease. Early detection and awareness are keys to better heart health and peace of mind.</p>
                             <a href="{% url 'heart_disease_predict' %}" class="btn btn-custom">Predict</a>
                         </div>
                     </div>
@@ -44,7 +44,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Symptom-Based Prediction</h5>
-                            <p class="card-text">Select your symptoms and let our AI guide you towards potential conditions for informed decision-making.</p>
+                            <p class="card-text">Not sure what's causing your symptoms? Our symptom-based prediction tool uses AI to analyze the symptoms you select and provide potential conditions along with their likelihood. This feature helps guide you towards appropriate next steps, whether it's self-care or seeking professional medidcal advice.</p>
                             <a href="{% url 'medifai' %}" class="btn btn-custom">Predict</a>
                         </div>
                     </div>
@@ -69,7 +69,7 @@
         }
         .content {
             flex: 1; 
-            padding: 50px 15px;
+            padding: 50px 10px;
             text-align: center;
         }
 
@@ -78,7 +78,7 @@
             padding: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             border-radius: 10px;
-            height: 240px;
+            height: 340px;
             width: 420px;
             background: rgb(231, 235, 220);
         }
