--- a/templates/predict_diabetes.html
+++ b/templates/predict_diabetes.html
@@ -8,6 +8,9 @@
 <div class="content">
     <div class="container">
         <h1>Diabetes Prediction</h1>
+        <p class="text-right">
+            <a href="{% url 'diabetes_help' %}" class="help-link">Learn About Prediction Attributes</a>
+        </p>
         <form method="post" action="{% url 'diabetes_predict' %}">
             {% csrf_token %}
             <div class="row">
@@ -115,6 +118,14 @@
         }
         button:hover {
             background-color: #218838;
+        }
+        .help-link {
+            text-decoration: none;
+            color: #007bff;
+        }
+        .help-link:hover {
+            text-decoration: underline;
+            color: #0056b3;
         }
         .results {
             margin-top: 20px;
